add ACTION_ACCESSIBILITY_SETTINGS, fix Singleton ViewModel on  BrowserRequestService

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.5.0"
+agp = "8.5.1"
 kotlin = "2.0.0"
 desugar_jdk_libs = "2.0.4"
 coreKtx = "1.13.1"
@@ -20,6 +20,7 @@ room = "2.6.1"
 # hilt
 hilt = "2.51.1"
 hiltCompose = "1.2.0"
+runtimeLivedata = "1.6.8"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -40,7 +41,6 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 androidx-lifecycle-service = { group = "androidx.lifecycle", name = "lifecycle-service", version.ref = "lifecycleService" }
 
 # room
-androidx-room-common = { group = "androidx.room", name = "room-common", version.ref = "room" }
 androidx-room = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
@@ -52,6 +52,7 @@ com-google-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-nav
 
 # Desugaring
 desugar_jdk_libs = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar_jdk_libs" }
+androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
 
 [bundles]
 room = [
